fix display on mobile

--- a/src/pages/Desktops/Desktop.module.css
+++ b/src/pages/Desktops/Desktop.module.css
@@ -4,5 +4,6 @@
   align-content: flex-start;
   gap: 15px;
   flex-wrap: wrap;
-  max-height: 90vh;
+  max-height: 90dvh;
+  touch-action: none;
 }
